# TestBevy

./: Cargo.toml  memo.md
.github/workflows/: release.yaml
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  lib.rs
src/: main.rs
